--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,15 @@
 
 }
 .Home-para{
-    margin-top: 5%;
+    margin-top: 4%;
     margin-left: 2%;
 
 }
 .para-border{
     margin-right: 50%;
     border-top: 2px solid white;
+    padding-top: 1%;
+    padding-left: 1%;
 
 }
 
