--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,17 @@
     padding-left: 1%;
 
 }
+#card-pack{
+
+    background-color: rgba(24, 24, 24, 0.705);
+
+}
+#packs-border{
+    border-bottom: 2px solid gray;
+    margin-left: 3%;
+    margin-right: 3%;
+}
+
 
 /*  */
 .login-box{
